--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -2,7 +2,7 @@
 const members = [
   'Shikha Iyer', 
   'Sayuri Rodrigo', 
-  'Adarsh Kumar', 
+  'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>', 
   'Isabelle Anderson', 
   'Hanlin Su', 
   'Rien Gupta', 
