--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -66,50 +66,47 @@ const userData = {
     {
       url: 'https://discord.com/users/768273827549282305', 
       name: 'Discord'
-    }
+    }, 
     {
-      handle: 'W.Web.Wizards',
-      platforms: [
-        'Instagram',
-      ],
-    },
+      url: 'https://instagram.com/W.Web.Wizards', 
+      name: 'Instagram', 
+    }, 
     {
-      handle: 'W_Web_Wizards',
-      platforms: [
-        'Twitter',
-      ],
-    },
+      url: 'W_Web_Wizards', 
+      name: 'Twitter', 
+    }, 
     {
-      handle: 'akumarrws',
-      platforms: [
-        'Instagram',
-        'Threads',
-      ],
-    },
+      url: 'https://instagram.com/akumarrws', 
+      name: 'Instagram', 
+    }, 
     {
-      handle: 'akumar.transit',
-      platforms: [
-        'Instagram',
-      ],
-    },
+      url: 'https://threads.net/@akumarrws', 
+      name: 'Threads', 
+    }, 
     {
-      handle: 'akumar.photos',
-      platforms: [
-        'Instagram',
-      ],
-    },
+      url: 'https://instagram.com/akumar.transit', 
+      name: 'Instagram', 
+    }, 
     {
-      handle: 'akumarrws',
-      platforms: [
-        'Twitter',
-        'YouTube',
-        'TikTok',
-        'Discord',
-      ],
-      discord: {
-        id: '1097241365198409728',
-      },
-    },
+      url: 'https://instagram.com/akumar.photos', 
+      name: 'Instagram', 
+    }, 
+    {
+      url: 'https://X.com/akumarrws', 
+      name: 'Twitter', 
+    }, 
+    {
+      url: 'https://youtube.com/akumarrws', 
+      name: 'YouTube', 
+    }, 
+    {
+      url: 'https://tiktok.com/akumarrws', 
+      name: 'TikTok', 
+    }, 
+    {
+      url: 'https://discord.com/users/1097241365198409728', 
+      name: 'Instagram', 
+    }, 
   ],
   portfolio: [
     {
