--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -1,4 +1,6 @@
 ---
+import defaultBio from './defaultBio.js'
+
 const userData = {
   username: 'adarsh'
   name: 'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>',
