--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -12,7 +12,7 @@ const userData = {
     },
   }, 
   pfp: {
-    url: `/assets/members/${userData.username}/pfp.png`
+    url: `/assets/members/${userData.username}/pfp.png`, 
     g4g: {
       sizes: [
         {
