--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -38,7 +38,7 @@ const userData = {
       name: 'Website', 
     }, 
     {
-      url: 'https://youtube.com/@RockGamerHub'
+      url: 'https://youtube.com/@RockGamerHub', 
       name: 'YouTube', 
     }, 
     {
