--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -54,7 +54,7 @@ const userData = {
       name: 'Twitter', 
     }, 
     {
-      url: 'https://tiktok.com/@RockGamerAK'
+      url: 'https://tiktok.com/@RockGamerAK', 
       name: 'TikTok', 
     }, 
     {
