--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -21,7 +21,7 @@ import '../styles/photos.scss'
   <section class="hero fullHeight" id="content">
     <ul id="menu">
       <h1>Club Members</h1>
-      {members.map((member) => ( <a href={`/members/${member.split(' ')[0].toLowerCase()}`}><li>{member}</li></a> ))}
+      {members.map((member) => ( <a href={`/members/${member.split(' ')[0].toLowerCase()}`}><li set:html={member}></li></a> ))}
     </ul>
   </section>
   <script is:inline>
