--- a/src/styles/pages/members.scss
+++ b/src/styles/pages/members.scss
@@ -44,6 +44,7 @@ main#profile {
         &:is(#email, #location) {
             line-height: 1;
             transition: all 100ms ease;
+            color: black;
             &:hover {
                 color: blue;
                 &:visited {
