--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -185,7 +185,9 @@ import '../../styles/photos.scss'
     </section>
   </main>
   <script is:inline>
-    var hasAddedMemberInfo = false
+    var isBeta = localStorage.getItem('isBeta')
+    var hasAddedMemberInfo = true
+    if (isBeta) hasAddedMemberInfo = false
   </script>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
