--- a/src/pages/members/sam.astro
+++ b/src/pages/members/sam.astro
@@ -5,6 +5,9 @@ import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
 <Layout title="Members">
+  <script is:inline>
+    var hasAddedMemberInfo = true
+  </script>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
 </Layout>
