--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -185,7 +185,7 @@ import '../../styles/photos.scss'
     </section>
   </main>
   <script is:inline>
-    var isBeta = localStorage.getItem('isBeta')
+    var isBeta = !!localStorage.getItem('isBeta')
     var hasAddedMemberInfo = true
     if (isBeta) hasAddedMemberInfo = false
   </script>
