--- a/src/pages/beta/enroll.astro
+++ b/src/pages/beta/enroll.astro
@@ -3,7 +3,7 @@ import '../../styles/globals.scss'
 import Layout from '../../layouts/Layout.astro'
 ---
 <Layout title="Enroll | Website Beta">
-  <main id="content">
+  <main id="content" class="enroll__beta">
     <h1 style="width: fit-content;">Website Features Beta Program</h1>
     <button id="enroll">Enroll</button>
     <button id="unenroll">UnEnroll</button>
