--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -159,6 +159,25 @@ userData.socials.forEach(function(social, i) {
   userData.socials[i].icon = `/assets/icons/${social.name.toLowerCase()}.svg`
 })
 
+if (!!userData.bio) {
+  if (!!userData.bio.w1 && !!userData.bio.w2) {
+    userData.bio.result = defaultBio(userData.name, userData.bio.w1, userData.bio.w2)
+  }
+  else if (!!userData.bio.w1) {
+    userData.bio.result = defaultBio(userData.name, userData.bio.w1)
+  }
+  else if (!!userData.bio.w2) {
+    userData.bio.result = defaultBio(userData.name, false, userData.bio.w2)
+  }
+  else {
+    userData.bio.result = defaultBio(userData.name)
+  }
+}
+else {
+  userData.bio = {}
+  userData.bio.result = defaultBio(userData.name)
+}
+
 import Layout from '../../layouts/Layout.astro'
 
 import '../../styles/pages/members.scss'
@@ -182,7 +201,7 @@ import '../../styles/photos.scss'
           </li>
         ))}
       </ul>
-      <p id="bio"></p>
+      <p id="bio" set:html={userData.bio.result}></p>
     </section>
   </main>
   <script is:inline>
