--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -68,14 +68,14 @@ const userData = {
       url: 'https://discord.com/users/768273827549282305', 
       name: 'Discord'
     }, 
-    {
-      url: 'https://instagram.com/W.Web.Wizards', 
-      name: 'Instagram', 
-    }, 
-    {
-      url: 'W_Web_Wizards', 
-      name: 'Twitter', 
-    }, 
+    // {
+    //   url: 'https://instagram.com/W.Web.Wizards', 
+    //   name: 'Instagram', 
+    // }, 
+    // {
+    //   url: 'W_Web_Wizards', 
+    //   name: 'Twitter', 
+    // }, 
     {
       url: 'https://instagram.com/akumarrws', 
       name: 'Instagram', 
@@ -106,7 +106,7 @@ const userData = {
     }, 
     {
       url: 'https://discord.com/users/1097241365198409728', 
-      name: 'Instagram', 
+      name: 'Discord', 
     }, 
   ],
   portfolio: [
