--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro'
 ---
 <Layout title="404">
-  <header id="content">
+  <section class="hero" id="content">
     <section>
       <div>
         <h1>404 Not Found</h1>
@@ -10,5 +10,5 @@ import Layout from '../layouts/Layout.astro'
         <h3>Either we never created this page to begin with or we have deleted it. Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
       </div>
     </section>
-  </header>
+  </section>
 </Layout>
