--- a/src/pages/members/gwen.astro
+++ b/src/pages/members/gwen.astro
@@ -6,7 +6,7 @@ import '../../styles/photos.scss'
 ---
 <Layout title="Members">
   <script is:inline>
-    var hasAddedMemberInfo = true
+    var hasAddedMemberInfo = truefalse
   </script>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
