--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,9 +1,9 @@
 ---
 const members = [
-  'Shikha Iyer', 
-  'Sayuri Rodrigo', 
+  'Shikha Iyer <span id="tag">(Club President)</span>', 
+  'Sayuri Rodrigo <span id="tag">(Club Vice-President)</span>', 
   'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>', 
-  'Isabelle Anderson', 
+  'Isabelle Anderson <span id="tag">(Website Designer)</span>', 
   'Hanlin Su', 
   'Rien Gupta', 
   'Samantha Wolff', 
