--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -230,7 +230,7 @@ userData.portfolio.forEach(function(photo, i) {
     }
   })
   title = title.join('')
-  userData.portfolio[i].html = `<img src="${path}" title="${title}"/>`
+  userData.portfolio[i].html = `<img src="${path}" title="${title}" onclick="showItem(${name}, ${element}, ${capt}, ${desc}, 'p')"/>`
 })
 
 import Layout from '../../layouts/Layout.astro'
