--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -224,7 +224,7 @@ userData.portfolio.forEach(function(photo, i) {
     }
   })
   title = title.join('')
-  userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + " onclick='showItem(`" + name + "`, `" + element + "`, `" + capt + "`, `" + desc + "`, `p`)'/>`
+  userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + " onclick='showItem(`" + name + "`, `" + element + "`, `" + capt + "`, `" + desc + "`, `p`)'/>"
 })
 
 import Layout from '../../layouts/Layout.astro'
