--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -243,7 +243,7 @@ import '../../styles/photos.scss'
         ))}
       </ul>
       <p id="bio" set:html={userData.bio.result}></p>
-      <h2>Portfilio</h2>
+      <h2>Portfolio</h2>
       <ul id="photos" style="height: auto; gap: 25px;">
         <li>
           {userData.portfolio.map((photo) => (
