--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -4,10 +4,16 @@ const members = [
   'Sayuri Rodrigo <span id="tag">(Club Vice-President)</span>', 
   'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>', 
   'Isabelle Anderson <span id="tag">(Website Designer)</span>', 
-  'Hanlin Su', 
+  'Amelia Chang', 
+  'Lucy Dittrich', 
   'Rien Gupta', 
-  'Samantha Wolff', 
+  'Maya Heiss', 
   'Chloe Mercado', 
+  'Hanlin Su', 
+  'Mia Tucker', 
+  'Samantha Wolff', 
+  'Bridget Won', 
+  'Isaac Wood', 
 ]
 
 
