create new member pages

--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -5,7 +5,7 @@ const members = [
   'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>', 
   'Isabelle Anderson <span id="tag">(Website Designer)</span>', 
   'Amelia Chang', 
-  'Lucy Dittrich', 
+  'Luce Dittrich', 
   'Rien Gupta', 
   'Maya Heiss', 
   'Chloe Mercado', 
