update (all member pages on the new system)

--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -230,7 +230,7 @@ import Layout from '../../layouts/Layout.astro'
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
-<Layout title="Members">
+<Layout title={userData.nameNoTitle}>
   <section id="content"></section>
   <main id="profile" class="profile">
     <section>
