--- a/src/pages/members/isaac.astro
+++ b/src/pages/members/isaac.astro
@@ -5,7 +5,7 @@ const userData = {
   name: 'Isacc Wood',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
-    g4g: true,
+    g4g: false,
     dtech: {
       year: 25,
     },
