--- a/src/pages/members/maya.astro
+++ b/src/pages/members/maya.astro
@@ -5,7 +5,7 @@ const userData = {
   name: 'Maya Heiss',
   pronunciation: false, //'Uh-da-r-sh',
   email: {
-    g4g: true,
+    g4g: false,
     dtech: {
       year: 26,
     },
