--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -216,7 +216,7 @@ section {
 }
 
 main {
-  & h2 {
+  &:not(#profile) h2 {
     text-transform: uppercase;
     font-weight: 400;
     font-size: 2.5rem;
