--- a/src/styles/pages/members.scss
+++ b/src/styles/pages/members.scss
@@ -57,11 +57,8 @@ main#profile {
             min-height: 16px;
             min-width: 16px;
 
-            position: relative;
             & > div {
-                position: absolute;
-                top: 0.5px;
-                left: 0;
+                translate: 0 0.5px;
                 
                 height: 16px;
                 width: 16px;
@@ -81,7 +78,6 @@ main#profile {
             & > span {
                 line-height: 1;
                 position: relative;
-                top: -4px;
             }
         }
     }
