--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Hero from '../components/hero.astro'
 ---
 <Layout title="404">
-  <section class="hero" id="content">
+  <Hero idName="content">
     <section>
       <div>
         <h1>404 Not Found</h1>
@@ -10,5 +11,5 @@ import Layout from '../layouts/Layout.astro'
         <h3>Either we never created this page to begin with or we have deleted it. Contact <a href="/members/adarsh">The Webmaster</a> to learn more!</h2>
       </div>
     </section>
-  </section>
+  </Hero>
 </Layout>
