--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -119,13 +119,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 section {
-  & h1:not(.profile > section > h1) {
+  &:not(.profile > section) h1 {
     margin: 0;
     text-transform: uppercase;
     font-weight: 200;
     font-size: 3rem;
   }
-  &:not(.profile > section > h2) h2 {
+  &:not(.profile > section) h2 {
     margin: 0;
     text-transform: uppercase;
     font-weight: 400;
