update some member's pages.astro

--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -222,7 +222,8 @@ userData.portfolio.forEach(function(photo, i) {
     }
   })
   title = title.join('')
-  userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + " onclick='showItem(`" + name + "`, `" + element + "`, `" + capt + "`, `" + desc + "`, `p`)'/>"
+  let onclickVal = `showItem("` + name + `", "` + element + "`, `" + capt + "`, `" + desc + "`, 'p')"
+  userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + ` onclick="${onclickVal}"/>`
 })
 
 import Layout from '../../layouts/Layout.astro'
