--- a/src/styles/pages/members.scss
+++ b/src/styles/pages/members.scss
@@ -78,6 +78,7 @@ main#profile {
             & > span {
                 line-height: 1;
                 position: relative;
+                top: -2px;
             }
         }
     }
