--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -223,7 +223,7 @@ userData.portfolio.forEach(function(photo, i) {
   })
   title = title.join('')
   let onclickVal = `showItem("` + name + `", "` + element + "`, `" + capt + "`, `" + desc + "`, 'p')"
-  userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + ` onclick="${onclickVal}"/>`
+  userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + ` onclick='${onclickVal}'/>`
 })
 
 import Layout from '../../layouts/Layout.astro'
