--- a/src/pages/members/shikha-beta.astro
+++ b/src/pages/members/shikha-beta.astro
@@ -185,7 +185,7 @@ userData.portfolio.forEach(function(photo, i) {
     }
   })
   title = title.join('')
-  let onclickVal = `showItem("` + name + `", "` + element + "`, `" + capt + "`, `" + desc + "`, 'p')"
+  let onclickVal = `showItem('` + name + `', '` + element + `', '` + capt + `', '` + desc + `', ` + 'p' + `)"
   userData.portfolio[i].html = '<img src="' + path + '" title="' + title + '"' + ` onclick='${onclickVal}'/>`
 })
 
