--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -92,7 +92,7 @@ import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 ---
 <Layout title={userData.nameNoTitle}>
-  <section id="content">{JSON.stringify(userData)}</section>
+  <section id="content"></section>
   <main id="profile" class="profile">
     <section>
       <span id="pfp" style={`background-image: url('${userData.pfp.url}')`}></span>
