--- a/src/styles/pages/members.scss
+++ b/src/styles/pages/members.scss
@@ -15,6 +15,10 @@ main#profile {
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        h2 {
+            margin-block: 0;
+        }
     }
 
     #pfp[style] {
