--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -2,7 +2,7 @@
 import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
-const userData = {
+var userData = {
   username: 'adarsh', 
   name: 'Adarsh Kumar <span id="tag">(Website Manager/Designer)</span>',
   pronunciation: false, //'Uh-da-r-sh',
