--- a/src/pages/members/amelia.astro
+++ b/src/pages/members/amelia.astro
@@ -2,7 +2,7 @@
 import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
-const userData = {
+var userData = {
   username: 'amelia', 
   name: 'Amelia Chang',
   pronunciation: false, //'Uh-da-r-sh',
