--- a/src/pages/members/bridget.astro
+++ b/src/pages/members/bridget.astro
@@ -2,7 +2,7 @@
 import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
-const userData = {
+var userData = {
   username: 'bridget', 
   name: 'Bridget Won',
   pronunciation: false, //'Uh-da-r-sh',
