--- a/src/pages/members/luce.astro
+++ b/src/pages/members/luce.astro
@@ -2,7 +2,7 @@
 import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
-const userData = {
+var userData = {
   username: 'luce', 
   name: 'Luce Dittrich',
   pronunciation: false, //'Uh-da-r-sh',
