--- a/src/pages/members/mia.astro
+++ b/src/pages/members/mia.astro
@@ -2,7 +2,7 @@
 import defaultBio from './defaultBio.js'
 import updateUserData from './updateUserData.js'
 
-const userData = {
+var userData = {
   username: 'mia', 
   name: 'Mia Tucker',
   pronunciation: false, //'Uh-da-r-sh',
