--- a/src/pages/members/isaac.astro
+++ b/src/pages/members/isaac.astro
@@ -25,7 +25,7 @@ var userData = {
   portfolio: [],
 }
 
-import updateUserData from './updateUserData.js'
+userData = updateUserData(userData)
 
 import Layout from '../../layouts/Layout.astro'
 
