--- a/src/pages/members/adarsh.astro
+++ b/src/pages/members/adarsh.astro
@@ -21,7 +21,9 @@ var userData = {
         }, 
       ],
     },
-    google: 'AEdFTp7icI4wRK0FPsc17CnhxoQslGk8Pj8cUQo8a6S80w',
+    google: {
+      url: 'AEdFTp7icI4wRK0FPsc17CnhxoQslGk8Pj8cUQo8a6S80w',
+    }, 
   },
   location: {
     city: 'Bay Area', 
