--- a/src/pages/members/amelia.astro
+++ b/src/pages/members/amelia.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ACg8ocKl9usBmfvWgfEwz0G10bj1280kSafRn9tyCIUbb6PLpw',
+    google: {
+      url: 'ACg8ocKl9usBmfvWgfEwz0G10bj1280kSafRn9tyCIUbb6PLpw',
+    }, 
   },
   location: {
     city: 'Bay Area', 
