--- a/src/pages/members/bridget.astro
+++ b/src/pages/members/bridget.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ACg8ocKApyLfnx8wws_Q7ns3cMQl38XM14Eg-rXj2s_6trKtlwg',
+    google: {
+      url: 'ACg8ocKApyLfnx8wws_Q7ns3cMQl38XM14Eg-rXj2s_6trKtlwg',
+    }, 
   },
   location: {
     city: 'Bay Area', 
