--- a/src/pages/members/chloe.astro
+++ b/src/pages/members/chloe.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ALV-UjV_3B7H9QC1X8k8neCS6Wj6COrDpDmKqNdGmWRtwYaCljl0MvzTLENj3cQVLNwL',
+    google: {
+      url: 'ACB-R5R3uvqh3F5n8t4297Rm1M57q55OBM2PCQUxJ4qD065ycwSkULmW4CdIb4m5E-qD',
+    }, 
   },
   location: {
     city: 'Bay Area', 
