--- a/src/pages/members/isaac.astro
+++ b/src/pages/members/isaac.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ALV-UjVRBb2Chq0JbG3pFa08W-AMyuwkFZ4tyhKRTVyZ2ZGi3M0',
+    google: {
+      url: 'ALV-UjVRBb2Chq0JbG3pFa08W-AMyuwkFZ4tyhKRTVyZ2ZGi3M0',
+    }, 
   },
   location: {
     city: 'Bay Area', 
