--- a/src/pages/members/luce.astro
+++ b/src/pages/members/luce.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ALV-UjVhDEghM7ibX1TXejFTvmE9z6R-XhbRVy1FCJ1KjgRnLtE',
+    google: {
+      url: 'ALV-UjVhDEghM7ibX1TXejFTvmE9z6R-XhbRVy1FCJ1KjgRnLtE',
+    }, 
   },
   location: {
     city: 'Bay Area', 
