--- a/src/pages/members/maya.astro
+++ b/src/pages/members/maya.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ACg8ocIHn03GI9oIyVS1QLsXwVMA3AUkAkeCciA48F7rIXzX',
+    google: {
+      url: 'ACg8ocIHn03GI9oIyVS1QLsXwVMA3AUkAkeCciA48F7rIXzX',
+    }, 
   },
   location: {
     city: 'Bay Area', 
