--- a/src/pages/members/mia.astro
+++ b/src/pages/members/mia.astro
@@ -13,7 +13,9 @@ var userData = {
     },
   }, 
   pfp: {
-    google: 'ALV-UjV0qcGUbpVYsz-QqjG9vaRuoAk3DQyknzC5VYLU-MQF-g',
+    google: {
+      url: 'ALV-UjV0qcGUbpVYsz-QqjG9vaRuoAk3DQyknzC5VYLU-MQF-g',
+    }, 
   },
   location: {
     city: 'Bay Area', 
