--- a/src/pages/members/shikha.astro
+++ b/src/pages/members/shikha.astro
@@ -21,7 +21,9 @@ var userData = {
         }, 
       ],
     },
-    google: 'AD5-WCmPo7cOTdQEFaMGPX2MmQ9ThsEGHVVhebGKnqnoww',
+    google: {
+      url: 'AD5-WCmPo7cOTdQEFaMGPX2MmQ9ThsEGHVVhebGKnqnoww',
+    }, 
   },
   location: {
     city: 'Bay Area', 
